--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --open",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest --ui",
     "postinstall": "husky install",
     "lint:check": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "@vitejs/plugin-legacy": "^4.1.1",
+    "@vitest/ui": "0.34.6",
     "eslint": "8.52.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -40,12 +41,13 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^48.0.1",
+    "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "terser": "^5.24.0",
     "typescript": "5.2.2",
-    "vite": "^4.4.5",
+    "vite": "^4.5.0",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.6"
   },
